--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lokana-client",
+  "name": "lokana-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -46,5 +46,6 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:5500/api"
 }
