Remove unnecessary dependency and syntax

--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "autoprefixer": "^9",
     "axios": "^0.21.1",
     "joi": "^17.4.0",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
-    "postcss": "^7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,8 +25,12 @@
     "react-leaflet-draw": "^0.19.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   },
   "scripts": {
     "start": "craco start",
