Setup for production build

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "set NODE_ENV=development&&nodemon index.js",
+    "start": "set NODE_ENV=production&&node index.js"
   },
   "author": "",
   "license": "ISC",
