--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lokana-client",
   "version": "0.1.0",
-  "private": true,
+  "homepage": ".",
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@headlessui/react": "^1.3.0",
