--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,25 +15,19 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install packages
-        run: npm install
       - name: Install packages on client folder then build pages
         env:
           CI: false
-          REACT_APP_API_LOGIN: ${{secrets.REACT_APP_API_LOGIN}}
-          REACT_APP_API_REGISTER: ${{secrets.REACT_APP_API_REGISTER}}
-          REACT_APP_API_USER: ${{secrets.REACT_APP_API_USER}}
-          REACT_APP_API_REFRESH: ${{secrets.REACT_APP_API_REFRESH}}
-          REACT_APP_API_WRFGEN: ${{secrets.REACT_APP_API_WRFGEN}}
-        run: cd client && npm install && npm run build
-      - name: Create environment file
-        uses: SpicyPizza/create-envfile@v1
-        with:
-          envkey_DB_URI_DEV: ${{secrets.DB_URI_DEV}}
-          envkey_DB_URI_PROD: ${{secrets.DB_URI_PROD}}
-          envkey_ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
-          envkey_REFRESH_TOKEN_SECRET: ${{secrets.REFRESH_TOKEN_SECRET}}
-          directory: /var/www/lokana-app/_work/lokana-app/lokana-app
-          file_name: .env
+        run: 
+          cd client
+          cat > .env <<EOL
+          REACT_APP_API_LOGIN=${{secrets.REACT_APP_API_LOGIN}}
+          REACT_APP_API_REGISTER=${{secrets.REACT_APP_API_REGISTER}}
+          REACT_APP_API_USER=${{secrets.REACT_APP_API_USER}}
+          REACT_APP_API_REFRESH=${{secrets.REACT_APP_API_REFRESH}}
+          REACT_APP_API_WRFGEN=${{secrets.REACT_APP_API_WRFGEN}}
+          EOL
+          npm install 
+          npm run build
       # - name: Deploy the production to server
       #   run: cd .. & pm2 stop lokana-app && pm2 start lokana-app && pm2 save && sudo service nginx restart
