--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install packages on client folder then build pages
         env:
           CI: false
-        run: 
+        run: |
           cd client
           touch .env
           echo REACT_APP_API_LOGIN=${{secrets.REACT_APP_API_LOGIN}} >> .env
