--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.10.1",
+    "react-hot-toast": "^2.1.1",
     "react-leaflet": "^3.2.0",
     "react-leaflet-draw": "^0.19.8",
     "react-router-dom": "^5.2.0",
