--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,9 @@ jobs:
           touch .env
           echo REACT_APP_API_LOGIN=${{secrets.REACT_APP_API_LOGIN}} >> .env
           echo REACT_APP_API_REGISTER=${{secrets.REACT_APP_API_REGISTER}} >> .env
+          echo REACT_APP_API_EMAIL_VERIFICATION=${{secrets.REACT_APP_API_EMAIL_VERIFICATION}} >> .env
+          echo REACT_APP_API_FORGOT_PASSWORD=${{secrets.REACT_APP_API_FORGOT_PASSWORD}} >> .env
+          echo REACT_APP_API_RESET_PASSWORD=${{secrets.REACT_APP_API_RESET_PASSWORD}} >> .env
           echo REACT_APP_API_USER=${{secrets.REACT_APP_API_USER}} >> .env
           echo REACT_APP_API_REFRESH=${{secrets.REACT_APP_API_REFRESH}} >> .env
           echo REACT_APP_API_WRFGEN=${{secrets.REACT_APP_API_WRFGEN}} >> .env
@@ -37,6 +40,10 @@ jobs:
           echo CORS_ORIGIN=${{secrets.CORS_ORIGIN}} >> .env
           echo ACCESS_TOKEN_SECRET=${{secrets.ACCESS_TOKEN_SECRET}} >> .env
           echo REFRESH_TOKEN_SECRET=${{secrets.REFRESH_TOKEN_SECRET}} >> .env
+          echo VERIFICATION_SECRET=${{secrets.VERIFICATION_SECRET}} >> .env
+          echo RESET_SECRET=${{secrets.RESET_SECRET}} >> .env
+          echo EMAIL_USER=${{secrets.EMAIL_USER}} >> .env
+          echo EMAIL_PASS=${{secrets.EMAIL_PASS}} >> .env
           npm install
           pm2 stop lokana-app
           pm2 start lokana-app
