--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.4",
     "@hookform/resolvers": "^2.6.0",
     "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -26,6 +27,7 @@
     "react-leaflet-draw": "^0.19.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
